...
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/spielbutton1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:rotationX="0"
...
            android:layout_margin="4dp"
            app:cornerRadius="0dp" />

    </GridLayout>

    <Button
        android:id="@+id/abbruch_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/abbruch_button_text"
        android:background="@drawable/rounded_rectangle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
